# WinTProxy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.example.json  guide.md  project-map.md
.trellis/spec/backend/: directory-structure.md  index.md  logging-guidelines.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/workspace/dev/: index.md  journal-1.md
docs/: architecture.md  build-and-runtime.md  build.md  config.md  configuration.md  index.md  run.md
examples/: basic.json  dns-hijack.json  proxy-all.json
inc/: common.h  config.h  connection.h  constants.h  divert.h  dns.h  log.h  process.h  rules.h  socks5.h  tcp_relay.h  udp_relay.h  util.h
inc/app/: config.h  lifecycle.h  log.h
inc/conntrack/: conntrack.h
inc/core/: common.h  constants.h  util.h
inc/divert/: adapter.h  io.h
inc/dns/: hijack.h  plan.h
inc/flow/: action.h  executor.h  plan.h
inc/ndisapi/: adapter.h
inc/net/: headers.h
inc/packet/: context.h
inc/path/: bypass.h  classify.h  proxy.h  return.h
inc/policy/: rules.h
inc/process/: lookup.h
inc/relay/: socks5.h  tcp.h  udp.h
lib/ndisapi/: ndisapi.def  ndisapi.h
lib/windivert/: WinDivert.def
records/: glossary.md
records/decisions/: 2026-05-30-direct-ndisapi-types.md  2026-05-30-mstcp-revert-model.md  2026-05-30-single-worker-reader.md
records/questions/: 2026-05-30-ndisapi-migration.md  2026-05-31-full-data-flow-refactor.md
records/research/: 2026-05-30-proxifyre-packet-flow.md
records/specs/: 2026-05-30-ndisapi-migration.md  2026-05-31-code-audit-cleanup.md  2026-05-31-full-data-flow-refactor.md
records/tasks/: 2026-05-30-ndisapi-migration-t1-adapter.md  2026-05-30-ndisapi-migration-t2-classify.md  2026-05-30-ndisapi-migration-t3-tcp-proxy.md  2026-05-30-ndisapi-migration-t4-udp-dns.md  2026-05-30-ndisapi-migration-t5-dns-remaining.md  2026-05-30-ndisapi-migration-t6-cleanup.md  2026-05-31-code-audit-cleanup-t1-dead-code.md  2026-05-31-code-audit-cleanup-t2-style-constants.md  2026-05-31-code-audit-cleanup-t3-memory-safety.md  2026-05-31-full-data-flow-refactor-t1-flow-plan-foundation.md  2026-05-31-full-data-flow-refactor-t2-tcp-proxy-return.md  2026-05-31-full-data-flow-refactor-t3-udp-proxy-return.md  2026-05-31-full-data-flow-refactor-t4-udp-dns-rewrite.md  2026-05-31-full-data-flow-refactor-t5-loopback-dns-and-tcp-dns.md  2026-05-31-full-data-flow-refactor-t6-startup-quarantine.md  2026-06-01-full-data-flow-refactor-t7-shutdown-fence.md  2026-06-01-full-data-flow-refactor-t8-log-levels.md
records/topics/2026-05-31-full-data-flow-refactor/: questions.md  spec.md
records/topics/2026-06-11-readpackets-replacement/: questions.md  spec.md
records/topics/2026-06-11-strong-data-flow-architecture/: spec.md
records/topics/2026-06-12-hot-path-consolidation/: spec.md
src/: config.c  connection.c  divert.c  dns.c  log.c  main.c  process.c  rules.c  socks5.c  tcp_relay.c  udp_relay.c
src/app/: config.c  lifecycle.c  log.c  main.c
src/conntrack/: conntrack.c
src/divert/: adapter.c
src/dns/: hijack.c  plan.c
src/flow/: action.c  executor.c  plan.c
src/ndisapi/: adapter.c
src/packet/: context.c
src/path/: bypass.c  classify.c  proxy.c  return.c
src/policy/: rules.c
src/process/: lookup.c
src/relay/: socks5.c  tcp.c  udp.c
tests/: conntrack_roles_test.c  flow_t1_test.c  lifecycle_shutdown_test.c  log_levels_test.c  ndisapi_readers_test.c  udp_framing_test.c
tests/include/: mswsock.h  windows.h  winsock2.h  ws2tcpip.h
tests/support/: stubs.c
(+42 files in other folders)
